Future Build 1.0.0.1

WebService Changes:

- added a Role "ConfirmedUser" (Email Address confirmed) for future use (maybe allow versioning only for these users?)
- set the daily Data-Volume Cap to 1GB (for now, can be raised - just to avoid unpleasant surprises)
- DELETE now actually deletes all database-entries in every table, not only the head.
- fixed a bug, where Tags where only added but not removed if not present anymore on a sinner
- added Flat Tags for better searchability (only on the server and hidden)
- Tags now have a Property "TagComment", which should help to find errors (Debugging)
- SinnerID is set in every tag now
- wiped the Database clean (because it WAS really messed up)
- added function GetDeleteAndRecreateDb() for cases where it's really messed up
- added basic validation in the Post WebService function in SinnersController
- changed LastChange (Sinner-Property) from DateTime? to DateTime

Application Changes:

- fixed a bug, where the upload DID finish, but the execution of the program didn't resume
- Added the "Extra" for each HubClassTagAttribute (so that Increase [Attribute] gets a + WIL-Childtag)
- Show TagComment in the TreeNodeList of the Tags
- HubClassTags saves it's children in the Comment (SourceID should be enough to identify it)
- tweaked Login/Logout (no spamming of frmWebBrowser anymore)
- TagType was not set correctly in the TagExtractor-Reflection
- SinnerId is taken into account after the first POST to the WebService
- moved Uploadfunction into CharacterExtended
- added a ToolTip to the Online-Treenode in case something goes wrong with the ChummerHub-Query
- reworked Multi-Upload Button in Options-Dialog
- Fixed NullReferenceException when no spell was selected in the Sinner-Search dialog.
- added Changelog ;)