@@ -1,17 +1,20 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SINners_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SINners_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information",
+      "Newtonsoft.Json": "Debug"
     },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information",
-            "Newtonsoft.Json": "Debug"
-        },
-        "Console": {
-            "IncludeScopes": true
-        }
-    },
-    "AllowedHosts": "*"
+    "Console": {
+      "IncludeScopes": true
+    }
+  },
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "8a551326-7224-4b2d-a0d1-81a7b0415824"
+  }
 }
