@@ -2,6 +2,7 @@ Future Build 1.0.0.1
 
 WebService Changes:
 
+- added ApplicationInsights Livetracking to see what's going on in the Azure Portal
 - added a Role "ConfirmedUser" (Email Address confirmed) for future use (maybe allow versioning only for these users?)
 - set the daily Data-Volume Cap to 1GB (for now, can be raised - just to avoid unpleasant surprises)
 - DELETE now actually deletes all database-entries in every table, not only the head.
